[gd_scene load_steps=36 format=3 uid="uid://clpnxse35m8q1"]

[ext_resource type="Script" uid="uid://c2hbd7nmn2cwh" path="res://main.gd" id="1_1lou1"]
[ext_resource type="Texture2D" uid="uid://bsppdk1cpe6a8" path="res://Imported_Background/Purple.png" id="1_jqcyg"]
[ext_resource type="PackedScene" uid="uid://dpmthxhg01t2m" path="res://char/Customer.tscn" id="3_oqa6r"]
[ext_resource type="Texture2D" uid="uid://2lscdjr2akyy" path="res://white.png" id="4_takeo"]
[ext_resource type="AudioStream" uid="uid://tpam34ghlef3" path="res://beep.wav" id="7_y86bs"]
[ext_resource type="Texture2D" uid="uid://cnkxa8jk7smjk" path="res://icon.svg" id="8_lljbe"]
[ext_resource type="Script" uid="uid://cl66krass8k4l" path="res://ProducttoScan.gd" id="9_evrua"]
[ext_resource type="Texture2D" uid="uid://d2cohkhow6c4i" path="res://Imported_Background/Brown.png" id="9_hc3vt"]
[ext_resource type="Texture2D" uid="uid://dduvhg8fdbcvl" path="res://coffee cup.png" id="10_4w70j"]
[ext_resource type="Texture2D" uid="uid://rfwu1opje4a4" path="res://Gray.png" id="10_bf8pu"]
[ext_resource type="Texture2D" uid="uid://2cqs4u4nmcli" path="res://Imported_Background/Pink.png" id="10_efqc3"]
[ext_resource type="Texture2D" uid="uid://c2veb5p7o214x" path="res://Imported/Coffee Machine (Placeholder).png" id="10_gq4dn"]
[ext_resource type="Texture2D" uid="uid://cqhwa77lplyux" path="res://coffee machine.png" id="10_oiyxf"]
[ext_resource type="Texture2D" uid="uid://bfmej5mmye1kj" path="res://coffee.png" id="12_06jb2"]
[ext_resource type="AudioStream" uid="uid://ql4s8cif4b6u" path="res://cash baby dinero.mp3" id="12_bqxh6"]
[ext_resource type="AudioStream" uid="uid://guv1owvlngrj" path="res://roblox tycoon error.mp3" id="13_1b2e6"]
[ext_resource type="AudioStream" uid="uid://q28bb06inne3" path="res://SLURP.mp3" id="13_21bv0"]
[ext_resource type="Texture2D" uid="uid://603ph41ntibl" path="res://Terrain (16x16).png" id="13_di5qy"]
[ext_resource type="Texture2D" uid="uid://bufmsujqhgskh" path="res://char/Windows Blue.png" id="15_1b2e6"]
[ext_resource type="Texture2D" uid="uid://dg8gquviw1v5n" path="res://Imported_Background/Green.png" id="16_1b2e6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hq0e"]
resource_local_to_scene = true
bg_color = Color(0.42115, 0.00229025, 0.813601, 1)
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="GDScript" id="GDScript_nollb"]
script/source = "extends Node2D

const minutes_day = 1440
const minutes_hour = 60
const real_minute_duration = (2 * PI) / minutes_day

signal time_tick(day:int, hour:int, minute:int)

@export var ingame_speed = 1.0
@export var initial_hour: int = 12

var time: float = 0.0
var past_minute: float = -1.0
var label: Label

var is_night: bool = false  # Variable to track if it's night or day
var time_since_last_change: float = 0.0  # Time passed from last day & night change

func _ready():
	time = initial_hour * minutes_hour
	label = $Timer/Label
	time_tick.connect(_on_time_tick)

func _process(delta: float):
	time += delta * real_minute_duration * ingame_speed
	_recalculate_time()

	# Update the timer so each 3 secons that passes, it turns day & night.
	time_since_last_change += delta
	if time_since_last_change >= 3.0:
		_toggle_day_night()
		time_since_last_change = 0.0

func _recalculate_time():
	var total_minutes = int(time / real_minute_duration)
	var day = int(total_minutes / minutes_day)
	var current_day_minutes = total_minutes % minutes_day
	var hour = int(current_day_minutes / minutes_hour)
	var minute = int(current_day_minutes % minutes_hour)

	if past_minute != minute:
		past_minute = minute
		time_tick.emit(day, hour, minute)

func _toggle_day_night():

	if is_night:
		print(\"It's daytime\")
		is_night = false
	else:
		print(\"It's nighttime\")
		is_night = true 

func _on_time_tick(day:int, hour:int, minute:int):
	if label:
		label.text = \"Day: %d, Time: %02d:%02d\" % [day, hour, minute]

###	# **Change Scene when Time Reaches 15:00**
###	if hour == 15 and minute == 0:
###		get_tree().change_scene_to_file(\"res://MainMenu.tscn\")  # Replace with your scene path
"

[sub_resource type="AtlasTexture" id="AtlasTexture_1wcai"]
atlas = ExtResource("10_gq4dn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bh5i"]
atlas = ExtResource("10_gq4dn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oemi"]
atlas = ExtResource("10_gq4dn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jyn1"]
atlas = ExtResource("10_gq4dn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmyp4"]
atlas = ExtResource("10_gq4dn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxtxk"]
atlas = ExtResource("10_gq4dn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtjqv"]
atlas = ExtResource("10_gq4dn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogme8"]
atlas = ExtResource("10_gq4dn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3gj5"]
atlas = ExtResource("10_gq4dn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75rse"]
atlas = ExtResource("10_gq4dn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4rff"]
atlas = ExtResource("10_gq4dn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvikx"]
atlas = ExtResource("10_gq4dn")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4rgts"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wcai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bh5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oemi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jyn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmyp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxtxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtjqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogme8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3gj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75rse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4rff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvikx")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Node" type="Node"]
script = ExtResource("1_1lou1")

[node name="PlayerGUI" type="Node" parent="."]

[node name="CanvasLayerButtons" type="CanvasLayer" parent="PlayerGUI"]

[node name="Button1" type="Button" parent="PlayerGUI/CanvasLayerButtons"]
anchors_preset = -1
anchor_top = 0.921
anchor_right = 0.259
anchor_bottom = 1.0
offset_top = -0.807983
offset_right = -0.368011
offset_bottom = -1.99994
theme_override_font_sizes/font_size = 30
text = "scene 1"

[node name="Button2" type="Button" parent="PlayerGUI/CanvasLayerButtons"]
anchors_preset = -1
anchor_left = 0.259
anchor_top = 0.92
anchor_right = 0.513
anchor_bottom = 0.997
offset_left = -0.368011
offset_top = -0.160034
offset_right = 0.0239868
offset_bottom = -0.0559692
theme_override_font_sizes/font_size = 30
text = "scene 2"

[node name="Button3" type="Button" parent="PlayerGUI/CanvasLayerButtons"]
anchors_preset = -1
anchor_left = 0.513
anchor_top = 0.92
anchor_right = 0.764
anchor_bottom = 0.997
offset_left = 0.0239868
offset_top = -0.160034
offset_right = -0.128052
offset_bottom = -0.0559692
theme_override_font_sizes/font_size = 30
text = "scene 3"

[node name="Button4" type="Button" parent="PlayerGUI/CanvasLayerButtons"]
anchors_preset = -1
anchor_left = 0.764
anchor_top = 0.923
anchor_right = 1.0
anchor_bottom = 0.997
offset_left = -0.128113
offset_top = -2.10406
offset_right = 1.0
offset_bottom = -0.0560303
rotation = 0.00136651
theme_override_font_sizes/font_size = 30
text = "scene 4"

[node name="CanvasLayerEnergy" type="CanvasLayer" parent="PlayerGUI"]

[node name="EnergyBar" type="ProgressBar" parent="PlayerGUI/CanvasLayerEnergy"]
anchors_preset = -1
anchor_left = 0.826
anchor_top = 0.012
anchor_right = 0.993
anchor_bottom = 0.049
offset_left = 0.447937
offset_top = 0.224
offset_right = 0.0639648
offset_bottom = 0.247999
theme_override_styles/fill = SubResource("StyleBoxFlat_2hq0e")
value = 1.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="EnergyTimer" type="Timer" parent="PlayerGUI/CanvasLayerEnergy/EnergyBar"]
process_callback = 0
wait_time = 25.0

[node name="Label" type="Label" parent="PlayerGUI/CanvasLayerEnergy/EnergyBar"]
layout_mode = 0
offset_left = 71.0001
offset_top = 44.0
offset_right = 111.0
offset_bottom = 67.0

[node name="CanvasLayerSupplies" type="CanvasLayer" parent="PlayerGUI"]

[node name="Coins" type="Label" parent="PlayerGUI/CanvasLayerSupplies"]
offset_left = 6.0
offset_top = 5.0
offset_right = 82.0
offset_bottom = 28.0
text = "MONEY: 0"
metadata/_edit_use_anchors_ = true

[node name="Supplies" type="Label" parent="PlayerGUI/CanvasLayerSupplies"]
offset_left = 6.0
offset_top = 25.0
offset_right = 96.0
offset_bottom = 48.0
text = "SUPPLIES: 0"
metadata/_edit_use_anchors_ = true

[node name="Day&Night" type="Node2D" parent="PlayerGUI/CanvasLayerSupplies"]
script = SubResource("GDScript_nollb")

[node name="Timer" type="Timer" parent="PlayerGUI/CanvasLayerSupplies/Day&Night"]

[node name="Label" type="Label" parent="PlayerGUI/CanvasLayerSupplies/Day&Night/Timer"]
offset_left = 595.0
offset_top = 13.0
offset_right = 765.0
offset_bottom = 36.0
text = "Day & Night,whatwhat"

[node name="Scene1" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Scene1"]
visible = false
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jqcyg")
stretch_mode = 1

[node name="Customer" parent="Scene1" instance=ExtResource("3_oqa6r")]
visible = false
position = Vector2(286, 233)

[node name="ShopCounter" type="Sprite2D" parent="Scene1"]
visible = false
position = Vector2(576, 463.5)
scale = Vector2(0.994819, 0.718157)
texture = ExtResource("4_takeo")

[node name="ProgressBar2" type="ProgressBar" parent="Scene1"]
visible = false
anchors_preset = -1
anchor_right = 0.173
anchor_bottom = 0.042
offset_left = 187.0
offset_top = 21.0
offset_right = 186.704
offset_bottom = 20.784
min_value = 1.0
value = 1.0
show_percentage = false

[node name="Label2" type="Label" parent="Scene1/ProgressBar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CustomerReappear" type="Timer" parent="Scene1/ProgressBar2"]
process_callback = 0
wait_time = 5.0

[node name="ProgressBar" type="ProgressBar" parent="Scene1"]
visible = false
anchors_preset = -1
anchor_right = 0.173
anchor_bottom = 0.042
offset_left = 187.0
offset_top = 21.0
offset_right = 186.704
offset_bottom = 20.784
min_value = 1.0
value = 1.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Scene1/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.00005
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CustomerTemper" type="Timer" parent="Scene1/ProgressBar"]
process_callback = 0
wait_time = 2.0

[node name="ScanningMinigameCanvasLayer" type="CanvasLayer" parent="Scene1"]
visible = false

[node name="ProducttoScan" type="Sprite2D" parent="Scene1/ScanningMinigameCanvasLayer"]
position = Vector2(107, 481)
scale = Vector2(0.8125, 1.63281)
texture = ExtResource("8_lljbe")

[node name="Button" type="Button" parent="Scene1/ScanningMinigameCanvasLayer/ProducttoScan"]
anchors_preset = -1
anchor_left = -0.127
anchor_top = -0.125
anchor_right = 1.186
anchor_bottom = 0.141
offset_left = -63.9747
offset_top = -64.0
offset_right = -64.0388
offset_bottom = -64.048
script = ExtResource("9_evrua")

[node name="PlaceinBagButton" type="Button" parent="Scene1/ScanningMinigameCanvasLayer"]
visible = false
offset_left = 782.0
offset_top = 77.0
offset_right = 854.0
offset_bottom = 149.0
toggle_mode = true
icon = ExtResource("10_bf8pu")

[node name="Bagging Area" type="Sprite2D" parent="Scene1/ScanningMinigameCanvasLayer"]
visible = false
position = Vector2(1008.5, 189)
scale = Vector2(2.21094, 2.21875)
texture = ExtResource("8_lljbe")

[node name="Fake Background" type="TextureRect" parent="Scene1/ScanningMinigameCanvasLayer"]
visible = false
offset_left = -14.0
offset_top = -11.0
offset_right = 1176.0
offset_bottom = 668.0
texture = ExtResource("10_gq4dn")
stretch_mode = 1

[node name="Sprite2D2" type="Sprite2D" parent="Scene1/ScanningMinigameCanvasLayer"]
visible = false
position = Vector2(507.75, 281)
scale = Vector2(2.08203, 1.51562)
texture = ExtResource("8_lljbe")

[node name="ProductBarcode" type="Button" parent="Scene1/ScanningMinigameCanvasLayer/Sprite2D2"]
anchors_preset = -1
anchor_left = -6.654
anchor_top = -9.615
anchor_right = -6.654
anchor_bottom = -9.615
offset_left = 789.393
offset_top = 1168.04
offset_right = 914.393
offset_bottom = 1293.04
toggle_mode = true

[node name="BarCode Scanner" type="Button" parent="Scene1/ScanningMinigameCanvasLayer"]
offset_left = 712.0
offset_top = 500.0
offset_right = 819.0
offset_bottom = 552.0
toggle_mode = true

[node name="Beep" type="AudioStreamPlayer2D" parent="Scene1/ScanningMinigameCanvasLayer/BarCode Scanner"]
position = Vector2(53, 26)
stream = ExtResource("7_y86bs")
volume_db = -10.0

[node name="Scene2" type="Node" parent="."]

[node name="TextureScene2" type="TextureRect" parent="Scene2"]
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_hc3vt")
stretch_mode = 1

[node name="Upgrades" type="Node" parent="Scene2"]

[node name="Successful" type="AudioStreamPlayer2D" parent="Scene2/Upgrades"]
visible = false
position = Vector2(-7.62939e-06, 0)
stream = ExtResource("12_bqxh6")

[node name="Error" type="AudioStreamPlayer2D" parent="Scene2/Upgrades"]
visible = false
position = Vector2(-7.62939e-06, 0)
stream = ExtResource("13_1b2e6")

[node name="Upgrade1-Energy" type="CanvasLayer" parent="Scene2/Upgrades"]
visible = false

[node name="Label" type="Label" parent="Scene2/Upgrades/Upgrade1-Energy"]
offset_left = 389.0
offset_top = 87.0
offset_right = 451.0
offset_bottom = 110.0
text = "ENERGY"
metadata/_edit_use_anchors_ = true

[node name="upgrade1" type="Button" parent="Scene2/Upgrades/Upgrade1-Energy"]
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.139
anchor_right = 0.294
anchor_bottom = 0.302
offset_left = -0.160004
offset_top = 25.928
offset_right = 0.311951
offset_bottom = 0.303986
icon = ExtResource("13_di5qy")
metadata/_edit_use_anchors_ = true

[node name="Upgrade2-MoneyCap" type="CanvasLayer" parent="Scene2/Upgrades"]
visible = false

[node name="Label" type="Label" parent="Scene2/Upgrades/Upgrade2-MoneyCap"]
offset_left = 780.0
offset_top = 82.0
offset_right = 842.0
offset_bottom = 105.0
text = "CAP"
metadata/_edit_use_anchors_ = true

[node name="upgrade2" type="Button" parent="Scene2/Upgrades/Upgrade2-MoneyCap"]
anchors_preset = -1
anchor_left = 0.445
anchor_top = 0.184
anchor_right = 0.66
anchor_bottom = 0.309
offset_left = 0.359985
offset_top = 0.76799
offset_right = -0.320007
offset_bottom = -0.23201
metadata/_edit_use_anchors_ = true

[node name="Upgrade3-MoneyGain" type="CanvasLayer" parent="Scene2/Upgrades"]
visible = false

[node name="upgrade3" type="Button" parent="Scene2/Upgrades/Upgrade3-MoneyGain"]
anchors_preset = -1
anchor_left = 0.077
anchor_top = 0.519
anchor_right = 0.292
anchor_bottom = 0.642
offset_left = 0.29599
offset_top = -0.312042
offset_right = -0.384033
offset_bottom = -0.0160217
icon = ExtResource("13_di5qy")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Scene2/Upgrades/Upgrade3-MoneyGain"]
anchors_preset = -1
anchor_left = -0.0173611
anchor_right = -0.0173611
offset_left = 404.0
offset_top = 313.0
offset_right = 466.0
offset_bottom = 336.0
text = "GAIN"
metadata/_edit_use_anchors_ = true

[node name="Upgrade4-CustomerTemper" type="CanvasLayer" parent="Scene2/Upgrades"]
visible = false

[node name="upgrade4" type="Button" parent="Scene2/Upgrades/Upgrade4-CustomerTemper"]
anchors_preset = -1
anchor_left = 0.438
anchor_top = 0.537
anchor_right = 0.653
anchor_bottom = 0.66
offset_left = 0.423981
offset_top = 0.0239868
offset_right = -0.256042
offset_bottom = 0.320007
icon = ExtResource("13_di5qy")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Scene2/Upgrades/Upgrade4-CustomerTemper"]
offset_left = 741.0
offset_top = 317.0
offset_right = 803.0
offset_bottom = 340.0
text = "TEMPER"
metadata/_edit_use_anchors_ = true

[node name="Scene3" type="Node" parent="."]

[node name="TextureScene3" type="TextureRect" parent="Scene3"]
visible = false
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_hc3vt")
stretch_mode = 1

[node name="TruckScene" type="Node" parent="Scene3"]

[node name="TextureSceneTruck" type="TextureRect" parent="Scene3/TruckScene"]
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_06jb2")
expand_mode = 2
stretch_mode = 1

[node name="ToComputer" type="Button" parent="Scene3/TruckScene"]
anchors_preset = -1
anchor_top = 0.352
anchor_right = 0.059
anchor_bottom = 0.523
offset_top = -0.0960236
offset_right = 0.0319977
offset_bottom = 0.0960083
metadata/_edit_use_anchors_ = true

[node name="ComputerScene" type="Node" parent="Scene3/TruckScene"]

[node name="TextureSceneComputer" type="TextureRect" parent="Scene3/TruckScene/ComputerScene"]
visible = false
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_efqc3")
stretch_mode = 1

[node name="ToTruck" type="Button" parent="Scene3/TruckScene/ComputerScene"]
visible = false
anchors_preset = -1
anchor_left = 0.941
anchor_top = 0.352
anchor_right = 1.0
anchor_bottom = 0.523
offset_left = -0.0321045
offset_top = -0.0960236
offset_bottom = 0.0960083

[node name="Restocking Shelves" type="Button" parent="Scene3/TruckScene/ComputerScene"]
visible = false
anchors_preset = -1
anchor_left = 0.436
anchor_top = 0.08
anchor_right = 0.908
anchor_bottom = 0.52
offset_left = -0.272034
offset_top = 0.159996
offset_right = -0.0161133
offset_bottom = 0.039978

[node name="Computer" type="Button" parent="Scene3/TruckScene/ComputerScene"]
visible = false
anchors_preset = -1
anchor_left = 0.073
anchor_top = 0.122
anchor_right = 0.518
anchor_bottom = 0.864
offset_left = -0.0960083
offset_top = -0.0560074
offset_right = 0.263977
offset_bottom = 0.127991

[node name="ComputerCanvasLayer" type="CanvasLayer" parent="Scene3/TruckScene/ComputerScene"]
visible = false

[node name="Computer Blue" type="TextureRect" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer"]
offset_left = 90.0
offset_top = 49.0
offset_right = 1039.0
offset_bottom = 562.0
texture = ExtResource("15_1b2e6")

[node name="Button" type="Button" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue"]
layout_mode = 0
offset_left = 349.0
offset_top = 178.0
offset_right = 492.0
offset_bottom = 293.0

[node name="Button2" type="Button" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue"]
layout_mode = 0
offset_left = 340.0
offset_top = 42.0
offset_right = 525.0
offset_bottom = 101.0

[node name="Button3" type="Button" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue"]
layout_mode = 0
offset_left = 46.0
offset_top = 190.0
offset_right = 243.0
offset_bottom = 281.0

[node name="Button4" type="Button" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue"]
layout_mode = 0
offset_left = 40.0
offset_top = 43.0
offset_right = 172.0
offset_bottom = 118.0

[node name="CloseButton" type="Button" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue"]
layout_mode = 0
offset_left = 919.0
offset_top = 1.0
offset_right = 949.0
offset_bottom = 30.0

[node name="CloseButton2" type="Button" parent="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue"]
layout_mode = 0
offset_left = 918.0
offset_top = 482.0
offset_right = 948.0
offset_bottom = 511.0

[node name="Scene4" type="Node" parent="."]

[node name="TextureScene4" type="TextureRect" parent="Scene4"]
visible = false
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_1b2e6")
stretch_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Scene4"]
visible = false

[node name="CoffeeMachine" type="Sprite2D" parent="Scene4/CanvasLayer"]
position = Vector2(880, 329.564)
scale = Vector2(1.27008, 1.16493)
texture = ExtResource("10_oiyxf")

[node name="CoffeeMachineButton" type="Button" parent="Scene4/CanvasLayer/CoffeeMachine"]
show_behind_parent = true
light_mask = 0
visibility_layer = 0
offset_left = -229.919
offset_top = -229.534
offset_right = 195.081
offset_bottom = 128.466
metadata/_edit_use_anchors_ = true

[node name="CoffeeMachineCooldown" type="Timer" parent="Scene4/CanvasLayer/CoffeeMachine/CoffeeMachineButton"]
wait_time = 5.0

[node name="CoffeeMachineRunning" type="AnimatedSprite2D" parent="Scene4/CanvasLayer"]
visible = false
position = Vector2(880, 305)
scale = Vector2(13.2812, 11.1875)
sprite_frames = SubResource("SpriteFrames_4rgts")
animation = &"new_animation"

[node name="Coffee" type="Button" parent="Scene4/CanvasLayer"]
visible = false
offset_left = 823.0
offset_top = 305.0
offset_right = 952.0
offset_bottom = 424.0

[node name="Sprite2D" type="Sprite2D" parent="Scene4/CanvasLayer/Coffee"]
position = Vector2(65, 52)
texture = ExtResource("12_06jb2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Scene4/CanvasLayer/Coffee"]
stream = ExtResource("13_21bv0")

[node name="Coffee Cup" type="Sprite2D" parent="Scene4/CanvasLayer"]
position = Vector2(888, 358)
texture = ExtResource("10_4w70j")

[node name="AddCup" type="Button" parent="Scene4/CanvasLayer/Coffee Cup"]
offset_left = -44.0
offset_top = -53.0
offset_right = 85.0
offset_bottom = 66.0

[connection signal="pressed" from="PlayerGUI/CanvasLayerButtons/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="PlayerGUI/CanvasLayerButtons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PlayerGUI/CanvasLayerButtons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PlayerGUI/CanvasLayerButtons/Button4" to="." method="_on_button_4_pressed"]
[connection signal="timeout" from="PlayerGUI/CanvasLayerEnergy/EnergyBar/EnergyTimer" to="." method="_on_energy_timer_timeout"]
[connection signal="visibility_changed" from="Scene1/Customer" to="." method="_on_customer_visibility_changed"]
[connection signal="timeout" from="Scene1/ProgressBar2/CustomerReappear" to="." method="_on_customer_reappear_timeout"]
[connection signal="timeout" from="Scene1/ProgressBar/CustomerTemper" to="." method="_on_customer_temper_timeout"]
[connection signal="button_up" from="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" to="." method="_on_button_up"]
[connection signal="button_up" from="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" to="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" method="_on_button_up"]
[connection signal="mouse_entered" from="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" to="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" to="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" to="." method="_on_pressed"]
[connection signal="pressed" from="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" to="Scene1/ScanningMinigameCanvasLayer/ProducttoScan/Button" method="_on_pressed"]
[connection signal="button_up" from="Scene1/ScanningMinigameCanvasLayer/PlaceinBagButton" to="." method="_on_placein_bag_button_button_up"]
[connection signal="pressed" from="Scene1/ScanningMinigameCanvasLayer/PlaceinBagButton" to="." method="_on_placein_bag_button_pressed"]
[connection signal="button_down" from="Scene1/ScanningMinigameCanvasLayer/Sprite2D2/ProductBarcode" to="." method="_on_product_barcode_button_down"]
[connection signal="button_up" from="Scene1/ScanningMinigameCanvasLayer/Sprite2D2/ProductBarcode" to="." method="_on_product_barcode_button_up"]
[connection signal="button_down" from="Scene1/ScanningMinigameCanvasLayer/BarCode Scanner" to="." method="_on_bar_code_scanner_button_down"]
[connection signal="toggled" from="Scene1/ScanningMinigameCanvasLayer/BarCode Scanner" to="." method="_on_BarCode_scanner_toggled"]
[connection signal="button_down" from="Scene2/Upgrades/Upgrade1-Energy/upgrade1" to="." method="_on_upgrade1_button_down"]
[connection signal="button_down" from="Scene2/Upgrades/Upgrade2-MoneyCap/upgrade2" to="." method="_on_upgrade_2_button_down"]
[connection signal="button_down" from="Scene2/Upgrades/Upgrade3-MoneyGain/upgrade3" to="." method="_on_upgrade_3_button_down"]
[connection signal="button_down" from="Scene2/Upgrades/Upgrade4-CustomerTemper/upgrade4" to="." method="_on_upgrade_4_button_down"]
[connection signal="pressed" from="Scene3/TruckScene/ToComputer" to="." method="_on_toComputer_pressed"]
[connection signal="pressed" from="Scene3/TruckScene/ComputerScene/ToTruck" to="." method="_on_toTruck_pressed"]
[connection signal="pressed" from="Scene3/TruckScene/ComputerScene/Computer" to="." method="_on_computer_pressed"]
[connection signal="pressed" from="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Scene3/TruckScene/ComputerScene/ComputerCanvasLayer/Computer Blue/CloseButton2" to="." method="_on_close_button_2_pressed"]
[connection signal="pressed" from="Scene4/CanvasLayer/CoffeeMachine/CoffeeMachineButton" to="." method="_on_coffeemachine_button_pressed"]
[connection signal="timeout" from="Scene4/CanvasLayer/CoffeeMachine/CoffeeMachineButton/CoffeeMachineCooldown" to="." method="_on_coffeemachine_cooldown_timeout"]
[connection signal="pressed" from="Scene4/CanvasLayer/Coffee" to="." method="_on_coffee_pressed"]
[connection signal="pressed" from="Scene4/CanvasLayer/Coffee Cup/AddCup" to="." method="_on_add_cup_pressed"]
